# sqllog2db

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DATABASE_GUIDE.md  Makefile  README.md  SECURITY.md  build.rs  cliff.toml  config.sqlite.toml  config.toml  rustfmt.toml  test.out  test_output.txt
.github/: dependabot.yml
.github/workflows/: bump-version.yaml  ci.yaml  publish.yaml  release.yaml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.1-MILESTONE-AUDIT.md  v1.3-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md
.planning/milestones/v1.2-phases/07-tech-debt-fix/: 07-01-PLAN.md  07-01-SUMMARY.md  07-01-VERIFICATION.md  (+3 more)
.planning/phases/: 15-DISCUSS-CHECKPOINT.json
.planning/phases/01-zhengze-ziduan-guolv/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-RESEARCH.md  01-REVIEW-FIX.md  01-REVIEW.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-shuchu-ziduan-kongzhi/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-UAT.md  02-VALIDATION.md
.planning/phases/03-profiling-benchmarking/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-HUMAN-UAT.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-csv/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-PATTERNS.md  04-RESEARCH.md  04-REVIEW-FIX.md  04-REVIEW.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-sqlite/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-PATTERNS.md  05-RESEARCH.md  05-REVIEW.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-parser-acceptance/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-REVIEW.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/phases/07-tech-debt-fix/: 07-PATTERNS.md
.planning/phases/09-cli/: 09-05-PLAN.md  09-REVIEW.md  09-VERIFICATION.md
.planning/phases/10-hot-path/: 10-DISCUSSION-LOG.md  10-PATTERNS.md  10-REVIEW.md
.planning/phases/11-nyquist/: 11-01-PLAN.md  11-CONTEXT.md
.planning/phases/12-sql/: 12-01-PLAN.md  12-01-SUMMARY.md  12-02-SUMMARY.md  12-CONTEXT.md  12-DISCUSSION-LOG.md  12-RESEARCH.md  12-VALIDATION.md
.planning/phases/13-templateaggregator/: 13-01-PLAN.md  13-01-SUMMARY.md  13-02-SUMMARY.md  13-CONTEXT.md  13-PATTERNS.md  13-REVIEW.md  13-VALIDATION.md
.planning/phases/14-exporter/: 14-02-PLAN.md  14-03-PLAN.md  14-03-SUMMARY.md  14-04-PLAN.md  14-04-SUMMARY.md  14-CONTEXT.md  14-PATTERNS.md  14-RESEARCH.md  14-REVIEW-FIX.md  14-VALIDATION.md
.planning/phases/15-svg/: 15-01-SUMMARY.md  15-04-PLAN.md  15-05-PLAN.md  15-05-SUMMARY.md  15-CONTEXT.md  15-DISCUSSION-LOG.md  15-RESEARCH.md  15-REVIEW.md  15-VERIFICATION.md
.planning/phases/16-remaining-charts/: 16-04-PLAN.md  16-04-SUMMARY.md  16-05-PLAN.md  16-CONTEXT.md  16-DISCUSSION-LOG.md  16-REVIEW-FIX.md  16-REVIEW.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/todos/pending/: 2026-04-26-dm-database-parser-sqllog-1-0-0.md
benches/: BENCHMARKS.md  bench_csv.rs  bench_filters.rs  bench_jsonl.rs  bench_sqlite.rs  parser_stress_test.rs  performance.rs  profile.rs
benches/baselines/: .gitignore
docs/: PARSER_PERFORMANCE_ANALYSIS.md  PERFORMANCE.md  SIMPLIFICATION.md  architecture.md  quickstart.md
docs/flamegraphs/: csv_export_real.json
examples/: README.md  config-csv.toml  config-parquet.toml  config-postgres.toml  config-sqlite.toml  csv_performance_analysis.rs  exporter_benchmark.rs  parse_benchmark.rs  scatter_plot.rs
scripts/: verify_jsonl.py
src/: color.rs  config.rs  constants.rs  error.rs  error_logger.rs  lang.rs  lib.rs  logging.rs  main.rs  parser.rs  resume.rs
src/charts/: frequency_bar.rs  latency_hist.rs  mod.rs  trend_line.rs  user_pie.rs
src/cli/: digest.rs  init.rs  mod.rs  opts.rs  preflight.rs  run.rs  run_tui.rs  show_config.rs  stats.rs  update.rs  validate.rs
src/exporter/: csv.rs  dm.rs  duckdb.rs  jsonl.rs  mod.rs  oracle.rs  parquet.rs  postgres.rs  sqlite.rs  util.rs
src/exporter/database/: dm.rs  duckdb.rs  mod.rs  oracle.rs  postgresql.rs  sqlite.rs
src/features/: filters.rs  mod.rs  replace_parameters.rs  scatter.rs  sql_fingerprint.rs  template_aggregator.rs
src/tui/: app.rs  mod.rs  progress.rs  ui.rs
tests/: additional_coverage_tests.rs  cli_comprehensive_tests.rs  cli_deep_coverage_tests.rs  cli_init_validate_tests.rs  cli_run_empty.rs  cli_run_integration_tests.rs  cli_tests.rs  complete_workflow_tests.rs  comprehensive_coverage_tests.rs  config_comprehensive_tests.rs  config_deep_validation_tests.rs  config_tests.rs  config_validation_tests.rs  constants_coverage_tests.rs  constants_deep_tests.rs  coverage_boost_tests.rs  e2e_cli_tests.rs  edge_cases_coverage_tests.rs  error_comprehensive_tests.rs  error_formatting_tests.rs  error_logger_deep_tests.rs  error_logger_tests.rs  error_logging_deep_tests.rs  error_tests.rs  exporter_actual_tests.rs  exporter_comprehensive_tests.rs  exporter_deep_tests.rs  exporter_jsonl_tests.rs  exporter_tests.rs  extra_e2e_tests.rs  filter_enable_tests.rs  filter_execid_tests.rs  filter_ip_tests.rs  filter_meta_tests.rs  filter_refactor_tests.rs  filter_tests.rs  integration.rs  integration_cli_tests.rs  integration_tests.rs  logging_coverage_tests.rs  (+11 more)
(+200 files in other folders)
