[package]
name = "dm-database-sqllog2db"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["guangl <guangl@example.com>"]
description = "高性能 CLI 工具：流式解析达梦数据库 SQL 日志并导出到 CSV/Parquet/JSONL/SQLite/DuckDB/PostgreSQL/DM"
homepage = "https://github.com/guangl/sqllog2db"
repository = "https://github.com/guangl/sqllog2db"
keywords = ["cli", "dm-database", "sqllog"]
categories = ["command-line-utilities"]
default-run = "sqllog2db"
license = "Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

exclude = [
    "/examples/*",
    "/docs/*",
    "/.github/*",
    "/.vscode/*",
    "/logs/*",
    "/sqllogs/*",
    "/export/*",
    "/outputs/*",
    "config.toml",
]

[[bin]]
name = "sqllog2db"
path = "src/main.rs"

[dependencies]
dm-database-parser-sqllog = "0.6.0"
env_logger = "0.11.8"
log = "0.4.28"
thiserror = "2.0.17"
itoa = "1.0"                        # 快速整数转字符串
rayon = "1.10"                      # 并行迭代

clap = { version = "4.5.51", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "0.9.8", features = ["serde"] }
chrono = { version = "0.4.42", features = ["clock"] }

# 性能分析
dhat = { version = "0.3", optional = true }

# 可选功能依赖
anyhow = { version = "1.0.100", optional = true }
parquet = { version = "57.1.0", optional = true }
arrow = { version = "57.1.0", optional = true }
serde_json = { version = "1.0.145", optional = true }

# 数据库依赖
csv = { version = "1.3.1", optional = true }
tempfile = { version = "3.23.0", optional = true }
rusqlite = { version = "0.35.0", features = [
    "bundled",
    "vtab",
    "csvtab",
], optional = true }
duckdb = { version = "1.4.2", features = ["bundled"], optional = true }
postgres = { version = "0.19.12", optional = true }

# TUI 依赖
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
tokio = { version = "1.41", features = ["full"], optional = true }

[features]
# 默认保持当前行为：启用 CSV 已实现的文件型数据库导出器
default = ["csv"]

# 各导出器特性开关
csv = ["dep:csv"]
parquet = ["dep:parquet", "dep:arrow"]
jsonl = ["dep:serde_json"]
sqlite = ["dep:rusqlite", "dep:tempfile", "csv"]
duckdb = ["dep:duckdb", "dep:tempfile", "csv"]
postgres = ["dep:postgres", "dep:tempfile", "csv"]
dm = ["dep:tempfile", "csv"]

# 其他功能特性开关
replace_parameters = ["dep:anyhow"]

# TUI 支持
tui = ["dep:ratatui", "dep:crossterm", "dep:tokio"]

[lints.rust]
unsafe_code = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
module_name_repetitions = "allow"
type_complexity = "allow"
similar_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
items_after_statements = "allow"
