[package]
name = "dm-database-sqllog2db"
version = "0.4.3"
edition = "2024"
rust-version = "1.85"
authors = ["guangl <guangl@example.com>"]
description = "高性能 CLI 工具：流式解析达梦数据库 SQL 日志并导出到 CSV/JSONL/SQLite"
homepage = "https://github.com/guangl/sqllog2db"
repository = "https://github.com/guangl/sqllog2db"
keywords = ["cli", "dm-database", "sqllog"]
categories = ["command-line-utilities"]
default-run = "sqllog2db"
license = "Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

exclude = [
  "/examples/*",
  "/docs/*",
  "/.github/*",
  "/.vscode/*",
  "/logs/*",
  "/sqllogs/*",
  "/export/*",
  "/outputs/*",
  "config.toml",
]

[[bin]]
name = "sqllog2db"
path = "src/main.rs"

[dependencies]
dm-database-parser-sqllog = "0.9.0"
env_logger = "0.11.8"
log = "0.4.29"
thiserror = "2.0.17"
itoa = "1.0"

clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "0.9.8", features = ["serde"] }
chrono = { version = "0.4.42", features = ["clock"] }
self_update = "0.43.1"

# 可选功能依赖
serde_json = { version = "1.0.145", optional = true }
ryu = { version = "1", optional = true }
rayon = { version = "1.10", optional = true }
# 数据库依赖
tempfile = { version = "3.23.0", optional = true }
rusqlite = { version = "0.37.0", features = [
  "bundled",
  "vtab",
  "csvtab",
], optional = true }

[features]
# 默认保持当前行为：启用 CSV 已实现的文件型数据库导出器
default = ["csv"]

# 各导出器特性开关
csv = []
jsonl = ["dep:serde_json", "dep:ryu"]
sqlite = ["dep:rusqlite", "dep:tempfile", "csv"]

# 其他功能特性开关
filters = ["dep:rayon"]

# 全量特性 (方便测试或一键启用)
full = ["csv", "jsonl", "sqlite", "filters"]


[lints.rust]
unsafe_code = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
type_complexity = "allow"
similar_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
items_after_statements = "allow"

[dev-dependencies]
tempfile = "3.23.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_csv"
harness = false
required-features = ["csv"]

[[bench]]
name = "bench_jsonl"
harness = false
required-features = ["jsonl"]

[[bench]]
name = "bench_sqlite"
harness = false
required-features = ["sqlite"]

[[bench]]
name = "bench_filters"
harness = false
required-features = ["filters", "csv"]
