[package]
name = "dm-database-sqllog2db"
version = "0.10.1"
edition = "2024"
rust-version = "1.85"
authors = ["guangl <guangl@example.com>"]
description = "高性能 CLI 工具：流式解析达梦数据库 SQL 日志并导出到 CSV/JSONL/SQLite"
homepage = "https://github.com/guangl/sqllog2db"
repository = "https://github.com/guangl/sqllog2db"
keywords = ["cli", "dm-database", "sqllog"]
categories = ["command-line-utilities"]
default-run = "sqllog2db"
license = "Apache-2.0"
readme = "README.md"

exclude = [
  "/examples/*",
  "/docs/*",
  "/.github/*",
  "/.vscode/*",
  "/logs/*",
  "/sqllogs/*",
  "/export/*",
  "/outputs/*",
  "config.toml",
]

[[bin]]
name = "sqllog2db"
path = "src/main.rs"

[dependencies]
dm-database-parser-sqllog = "0.9.0"
env_logger = "0.11.10"
log = "0.4.29"
thiserror = "2.0.18"
itoa = "1.0"

clap = { version = "4.6.0", features = ["derive", "env"] }
clap_complete = "4.6"
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "1.1.2", features = ["serde"] }
chrono = { version = "0.4.44", features = ["clock"] }
self_update = { version = "0.44.0", default-features = false, features = [
  "reqwest",
  "rustls",
  "compression-flate2",
] }
indicatif = "0.18"
ctrlc = "3"
glob = "0.3"
clap_mangen = "0.3"

serde_json = "1.0.149"
ryu = "1"
rayon = "1.11"
rusqlite = { version = "0.39.0", features = [
  "bundled",
  "vtab",
  "csvtab",
] }


[lints.rust]
unsafe_code = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
type_complexity = "allow"
similar_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
items_after_statements = "allow"

[dev-dependencies]
tempfile = "3.27.0"
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "bench_csv"
harness = false

[[bench]]
name = "bench_sqlite"
harness = false

[[bench]]
name = "bench_filters"
harness = false
